apps/hass/appdaemon/appdaemon-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdaemon
  namespace: hass
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: appdaemon
  template:
    metadata:
      labels:
        app: appdaemon
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: appdaemon
        image: acockburn/appdaemon:4.4.2
        ports:
        - containerPort: 5050
          name: http
          protocol: TCP
        volumeMounts:
        - name: appdaemon-data
          mountPath: /conf
        resources:
          requests:
            memory: 100Mi
            cpu: "20m"
          limits:
            memory: 250Mi
        livenessProbe: &probe
          httpGet:
            path: /api
            port: http
          initialDelaySeconds: 10
        readinessProbe: *probe
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: appdaemon-data
        persistentVolumeClaim:
          claimName: appdaemon-pvc
