apps/hass/appdaemon/appdaemon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appdaemon
  namespace: hass
spec:
  ingressClassName: nginx
  rules:
  - host: appdaemon.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: appdaemon
              port:
                number: 5050
